30-tools/sonarqube/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarqube
  labels:
    app: sonarqube
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarqube
  template:
    metadata:
      name: sonarqube
      labels:
        app: sonarqube
    spec:
      containers:
        - name: sonarqube.yml
          image: sonarqube:community
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9000
      restartPolicy: Always
