30-tools/sonarqube/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarqube
  namespace: sonarqube.yml
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: sonar.check-consulting.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sonarqube.yml
                port:
                  number: 80
  tls:
    - hosts:
        - sonar.check-consulting.net
      secretName: sonarqube.yml-tls
